--- a/ConsidWebExercise/Views/Category/Create.cshtml
+++ b/ConsidWebExercise/Views/Category/Create.cshtml
@@ -5,14 +5,17 @@
 
 <h1>Create</h1>
 <form method="post" asp-action="Create">
-    <div class="row">
+    <div class="border p-3">
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <div class="row">
             <div class="col-8">
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="CategoryName"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="CategoryName" class="form-control"/>
+                        <input asp-for="CategoryName" class="form-control" />
+                        <span asp-validation-for="CategoryName" class="text-danger"></span>
                     </div>
 
                 </div>
@@ -20,7 +23,7 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                           <input type="submit" class="btn btn-info w-100" value="Create"/>
+                            <input type="submit" class="btn btn-info w-100" value="Create" />
                         </div>
                         <div class="col">
                             <a asp-action="Index" class="btn btn-success w-100">Back</a>
@@ -32,4 +35,5 @@
                 @* Keep this empty *@
             </div>
         </div>
+    </div>
 </form>
