--- a/ConsidWebExercise/Views/Category/Index.cshtml
+++ b/ConsidWebExercise/Views/Category/Index.cshtml
@@ -4,14 +4,36 @@
 }
 <h1>List of Categories</h1> 
 
-@if (Model.Count() > 0)
-{
-    @foreach(var obj in Model)
+<div class="container">
+    <div class="row">
+        <a class="btn btn-primary" asp-action="Create">Create new Category</a>
+    </div>
+    @if (Model.Count() > 0)
     {
-        <p>@obj.CategoryName</p>
+        <ul>
+            @foreach (var obj in Model)
+            {
+            <div class="row p-3">
+                <div class="col-md-6">
+                    <li>@obj.CategoryName</li>
+                </div>
+                <div class="col-md-6">
+                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@obj.Id">Edit Category</a>
+                    <form asp-action="Delete" asp-route-id="@obj.Id">
+                        <input asp-for="@obj" type="hidden"/>
+                        <button class="btn btn-danger" type="submit">Delete Category</button>
+                    </form>
+                </div>
+            </div>
+            }
+        </ul>
     }
-}
-else
-{
-    <h2>There are currently no categories</h2>
+    else
+    {
+        <h2>There are currently no categories</h2>
+    }
+</div>
+
+@section Scripts {
+    @{ <partial name="_ValidationScriptsPartial"/>}
 }
