--- a/ConsidWebExercise/Views/Category/Index.cshtml
+++ b/ConsidWebExercise/Views/Category/Index.cshtml
@@ -2,38 +2,50 @@
 @{
     ViewData["Title"] = "Categories";
 }
-<h1>List of Categories</h1> 
 
-<div class="container">
-    <div class="row">
-        <a class="btn btn-primary" asp-action="Create">Create new Category</a>
+<div class="container p-3">
+    <div class="row pt-4">
+        <div class="col-6">
+            <h2 class="text-primary">Category List</h2>
+        </div>
+        <div class="col-6 text-right">
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">Create New Category</a>
+        </div>
     </div>
+    <br /><br />
+
     @if (Model.Count() > 0)
     {
-        <ul>
-            @foreach (var obj in Model)
-            {
-            <div class="row p-3">
-                <div class="col-md-6">
-                    <li>@obj.CategoryName</li>
-                </div>
-                <div class="col-md-6">
-                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@obj.Id">Edit Category</a>
-                    <form asp-action="Delete" asp-route-id="@obj.Id">
-                        <input asp-for="@obj" type="hidden"/>
-                        <button class="btn btn-danger" type="submit">Delete Category</button>
-                    </form>
-                </div>
-            </div>
-            }
-        </ul>
+        <table class="table table-bordered table-striped" style="width:100%">
+            <thead>
+                <tr>
+                    <th>
+                        Category Name
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var obj in Model)
+                {
+                    <tr>
+                        <td width="50%">@obj.CategoryName</td>
+                        <td class="text-center">
+                            <div class="w-75 btn-group" role="group">
+                                <a asp-controller="Category" asp-route-Id="@obj.Id" asp-action="Edit" class="btn btn-info mx-2">Edit</a>
+                                <form asp-action="Delete" asp-route-id="@obj.Id" method="post">
+                                    <button type="submit" class="btn btn-danger mx-2">Delete</button>
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     }
     else
     {
-        <h2>There are currently no categories</h2>
+        <p>No Category Exist</p>
     }
-</div>
 
-@section Scripts {
-    @{ <partial name="_ValidationScriptsPartial"/>}
-}
+</div>
