--- a/ConsidWebExercise/Views/CheckInOut/Index.cshtml
+++ b/ConsidWebExercise/Views/CheckInOut/Index.cshtml
@@ -1,8 +1,6 @@
 ﻿@model ConsidWebExercise.ViewModels.ListLibraryItemViewModel
 @{
-    ViewData["Title"] = "Library Item";
 }
-
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
@@ -49,10 +47,18 @@
                         <td>@obj.Type</td>
                         <td class="text-center">
                             <div class="w-75 btn-group" role="group">
-                                <a asp-controller="LibraryItem" asp-route-Id="@obj.Id" asp-action="Edit" class="btn btn-info mx-2">Edit</a>
-                                <form asp-action="Delete" asp-route-id="@obj.Id " method="post">
-                                    <button type="submit" class="btn btn-danger mx-2">Delete</button>
-                                </form>
+                                @if (obj.BarrowDate == null)
+                                {
+                                    <form asp-controller="CheckInOut" asp-action="CheckOut" asp-route-Id="@obj.Id " method="post">
+                                        <button class="btn btn-success mx-2" type="submit">Check Out</button>
+                                    </form>
+                                }
+                                else
+                                {
+                                    <form asp-controller="CheckInOut" asp-action="CheckIn" asp-route-Id="@obj.Id " method="post">
+                                        <button class="btn btn-warning mx-2" type="submit">Check In</button>
+                                    </form>
+                                }
                             </div>
                         </td>
                     </tr>
