--- a/ConsidWebExercise/Views/Shared/_Layout.cshtml
+++ b/ConsidWebExercise/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="LibraryItem" asp-action="Index">Library Item</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="CheckInOut" asp-action="Index">Check In/Out</a>
+                        </li>
                     </ul>
                 </div>
             </div>
