--- a/ConsidWebExercise/Views/CheckInOut/CheckOut.cshtml
+++ b/ConsidWebExercise/Views/CheckInOut/CheckOut.cshtml
@@ -8,11 +8,11 @@
     <input type="hidden" value="@Model" />
     <div class="form-group row">
         <div class="col-4">
-            <label asp-for="Barrower"></label>
+            <label asp-for="Borrower"></label>
         </div>
         <div class="col-8">
-            <input asp-for="Barrower" class="form-control" />
-            <span asp-validation-for="Barrower" class="text-danger"></span>
+            <input asp-for="Borrower" class="form-control" />
+            <span asp-validation-for="Borrower" class="text-danger"></span>
         </div>
     </div>
     <button type="submit">Check Out</button>
