--- a/ConsidWebExercise/Views/LibraryItem/Edit.cshtml
+++ b/ConsidWebExercise/Views/LibraryItem/Edit.cshtml
@@ -74,21 +74,21 @@
 
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="LibraryItem.Barrower"></label>
+                        <label asp-for="LibraryItem.Borrower"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="LibraryItem.Barrower" class="form-control" />
-                        <span asp-validation-for="LibraryItem.Barrower" class="text-danger"></span>
+                        <input asp-for="LibraryItem.Borrower" class="form-control" />
+                        <span asp-validation-for="LibraryItem.Borrower" class="text-danger"></span>
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="LibraryItem.BarrowDate"></label>
+                        <label asp-for="LibraryItem.BorrowDate"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="LibraryItem.BarrowDate" class="form-control" />
-                        <span asp-validation-for="LibraryItem.BarrowDate" class="text-danger"></span>
+                        <input asp-for="LibraryItem.BorrowDate" class="form-control" />
+                        <span asp-validation-for="LibraryItem.BorrowDate" class="text-danger"></span>
                     </div>
                 </div>
 
