--- a/ConsidWebExercise/Views/LibraryItem/Edit.cshtml
+++ b/ConsidWebExercise/Views/LibraryItem/Edit.cshtml
@@ -4,6 +4,7 @@
 }
 
 <form method="post" asp-action="Edit">
+    <input type="hidden" asp-for="LibraryItem.Id" />
     <div class="border p-3">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group row">
