--- a/ConsidWebExercise/Views/LibraryItem/Index.cshtml
+++ b/ConsidWebExercise/Views/LibraryItem/Index.cshtml
@@ -5,8 +5,24 @@
 
 <div class="container p-3">
     <div class="row pt-4">
-        <div class="col-6">
+        <div class="col-4">
             <h2 class="text-primary">Library Item List</h2>
+        </div>
+        <div class="col-2">
+            <form asp-action="Index" method="get">
+                <select name="sortingId" class="form-select" aria-label="Default select example">
+                    <option selected>Sort by</option>
+                    <option value="Title">Title</option>
+                    <option value="Category">Category</option>
+                    <option value="Author">Author</option>
+                    <option value="Pages">Pages</option>
+                    <option value="RunTimeMinutes">Run Time</option>
+                    <option value="Borrowable">Barrowable</option>
+                    <option value="Type">Type</option>
+                </select>
+                <button type="submit">Sort</button>
+            </form>
+
         </div>
         <div class="col-6 text-right">
             <a asp-controller="LibraryItem" asp-action="Create" class="btn btn-primary">Create New Library Item</a>
@@ -39,7 +55,7 @@
                 {
                     <tr>
                         <td>
-                            @obj.Title /@string.Join(string.Empty, obj.Title.Split(new[] { ' ' }, StringSplitOptions.RemoveEmptyEntries).Select(s => s[0])).ToUpper())
+                            @obj.Title (@string.Join(string.Empty, obj.Title.Split(new[] { ' ' }, StringSplitOptions.RemoveEmptyEntries).Select(s => s[0])).ToUpper())
                         </td>
                         <!-- Move this part into the controller for better separation of concerns -->
                         <td>@Model.categories.Where(category => category.Id == obj.CategoryId).First().CategoryName</td>
