--- a/ConsidWebExercise/Views/Employee/Index.cshtml
+++ b/ConsidWebExercise/Views/Employee/Index.cshtml
@@ -1,7 +1,61 @@
-﻿
+﻿@model IEnumerable<Employee>
 @{
     ViewData["Title"] = "Index";
 }
 
 <h1>Employee Controller</h1>
 
+<div class="container p-3">
+    <div class="row pt-4">
+        <div class="col-4">
+            <h2 class="text-primary">List of Employees</h2>
+        </div>
+        <div class="col-6 text-right">
+            <a asp-controller="Employee" asp-action="Create" class="btn btn-primary">Add new Employee</a>
+        </div>
+    </div>
+    <br /><br />
+</div>
+
+
+@if (Model.Count() > 0)
+{
+    <table class="table table-bordered table-striped" style="width:100%">
+        <thead>
+            <tr>
+                <th>Firstname</th>
+                <th>Lastname</th>
+                <th>Salary</th>
+                <th>CEO</th>
+                <th>Manager</th>
+                <th>Manager Id</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var employee in Model)
+            {
+            <tr>
+                <td>@employee.FirstName</td>
+                <td>@employee.LastName</td>
+                <td>@employee.Salary</td>
+                <td>@employee.IsCEO</td>
+                <td>@employee.IsManager</td>
+                <td>@employee.ManagerId</td>
+                <td class="text-center">
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Employee" asp-route-Id="@employee.Id" asp-action="Edit" class="btn btn-info mx-2">Edit</a>
+                        <form asp-action="Delete" asp-route-Id="@employee.Id " method="post">
+                            <button type="submit" class="btn btn-danger mx-2">Delete</button>
+                        </form>
+                    </div>
+                </td>
+            </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <h2 class="text-danger">There are currently no employees</h2>
+}
