--- a/ConsidWebExercise/Views/LibraryItem/Index.cshtml
+++ b/ConsidWebExercise/Views/LibraryItem/Index.cshtml
@@ -49,25 +49,22 @@
             </thead>
             <tbody>
 
-                @foreach (var obj in Model.libraryItems)
+                @for(int i = 0; i < Model.libraryItems.Count(); i++)
                 {
                     <tr>
-                        <td>
-                            @obj.Title
-                        </td>
-                        <!-- Move this part into the controller for better separation of concerns -->
-                        <td>@Model.categories.Where(category => category.Id == obj.CategoryId).First().CategoryName</td>
-                        <td>@obj.Author</td>
-                        <td>@obj.Pages</td>
-                        <td>@obj.RunTimeMinutes</td>
-                        <td>@obj.IsBorrowable</td>
-                        <td>@obj.Borrower</td>
-                        <td>@obj.BorrowDate</td>
-                        <td>@obj.Type</td>
+                        <td>@Model.libraryItems.ElementAt(i).Title (@Model.acronyms.ElementAt(i))</td>
+                        <td>@Model.categories.Where(category => category.Id == Model.libraryItems.ElementAt(i).CategoryId).First().CategoryName</td>
+                        <td>@Model.libraryItems.ElementAt(i).Author</td>
+                        <td>@Model.libraryItems.ElementAt(i).Pages</td>
+                        <td>@Model.libraryItems.ElementAt(i).RunTimeMinutes</td>
+                        <td>@Model.libraryItems.ElementAt(i).IsBorrowable</td>
+                        <td>@Model.libraryItems.ElementAt(i).Borrower</td>
+                        <td>@Model.libraryItems.ElementAt(i).BorrowDate</td>
+                        <td>@Model.libraryItems.ElementAt(i).Type</td>
                         <td class="text-center">
                             <div class="w-75 btn-group" role="group">
-                                <a asp-controller="LibraryItem" asp-route-Id="@obj.Id" asp-action="Edit" class="btn btn-info mx-2">Edit</a>
-                                <form asp-action="Delete" asp-route-id="@obj.Id " method="post">
+                                <a asp-controller="LibraryItem" asp-route-Id="@Model.libraryItems.ElementAt(i).Id" asp-action="Edit" class="btn btn-info mx-2">Edit</a>
+                                <form asp-action="Delete" asp-route-id="@Model.libraryItems.ElementAt(i).Id " method="post">
                                     <button type="submit" class="btn btn-danger mx-2">Delete</button>
                                 </form>
                             </div>
