--- a/ConsidWebExercise/Views/LibraryItem/Index.cshtml
+++ b/ConsidWebExercise/Views/LibraryItem/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConsidWebExercise.ViewModels.ListLibraryItemViewModel
+﻿@model ListLibraryItemViewModel
 @{
     ViewData["Title"] = "Library Item";
 }
