--- a/ConsidWebExercise/Views/Category/Create.cshtml
+++ b/ConsidWebExercise/Views/Category/Create.cshtml
@@ -7,7 +7,7 @@
 
 <form method="post" asp-action="Create">
     <div class="border p-3">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group row">
             <h2 class="text-info pl-3">Add Category</h2>
         </div>
