--- a/ConsidWebExercise/Views/Employee/Create.cshtml
+++ b/ConsidWebExercise/Views/Employee/Create.cshtml
@@ -1,11 +1,11 @@
-﻿@model ConsidWebExercise.ViewModels.CreateEmployeeViewModel
+﻿@model CreateEmployeeViewModel
 @{
     ViewData["Title"] = "Add new employee";
 }
 
 <form method="post" asp-action="Create">
     <div class="border p-3">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group row">
             <h2 class="text-info pl-3">Add new employee</h2>
         </div>
