--- a/ConsidWebExercise/Views/Employee/Edit.cshtml
+++ b/ConsidWebExercise/Views/Employee/Edit.cshtml
@@ -7,7 +7,7 @@
 <form method="post" asp-action="Edit">
     <input type="hidden" asp-for="Id" />
     <div class="border p-3">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group row">
             <h2 class="text-info pl-3">Add new employee</h2>
         </div>
