--- a/ConsidWebExercise/Views/LibraryItem/Edit.cshtml
+++ b/ConsidWebExercise/Views/LibraryItem/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConsidWebExercise.ViewModels.CreateLibraryItemViewModel 
+﻿@model CreateLibraryItemViewModel 
 @{
     ViewData["Title"] = "Edit";
 }
@@ -6,7 +6,7 @@
 <form method="post" asp-action="Edit">
     <input type="hidden" asp-for="LibraryItem.Id" />
     <div class="border p-3">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group row">
             <h2 class="text-info pl-3">Edit Library Item</h2>
         </div>
