--- a/ConsidWebExercise/Views/Employee/Create.cshtml
+++ b/ConsidWebExercise/Views/Employee/Create.cshtml
@@ -33,11 +33,11 @@
 
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="@Model.employeeToAdd.Salary"></label>
+                        <label asp-for="rank"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="@Model.employeeToAdd.Salary" class="form-control" />
-                        <span asp-validation-for="@Model.employeeToAdd.Salary" class="text-danger"></span>
+                        <input asp-for="rank" class="form-control" />
+                        <span asp-validation-for="rank" class="text-danger"></span>
                     </div>
                 </div>
 
@@ -67,6 +67,7 @@
                     </div>
                     <div class="col-8">
                         <select asp-for="@Model.employeeToAdd.ManagerId" asp-items="@(new SelectList(Model.managers,"Id","FirstName"))" class="custom-select">
+                            <option value="">No Manager</option>
                         </select>
                         <span asp-validation-for="@Model.employeeToAdd.ManagerId" class="text-danger"></span>
                     </div>
