--- a/ConsidWebExercise/Views/LibraryItem/Index.cshtml
+++ b/ConsidWebExercise/Views/LibraryItem/Index.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Library Item";
 }
 
+<div asp-validation-summary="All" class="text-danger"></div>
+
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-4">
