Changed the way that validation on library items are done and also some smaller bug fixes

--- a/ConsidWebExercise/Views/LibraryItem/Create.cshtml
+++ b/ConsidWebExercise/Views/LibraryItem/Create.cshtml
@@ -20,7 +20,7 @@
                             <option value="Book">Book</option>
                             <option value="DVD">DVD</option>
                             <option value="Audio Book">Audio Book</option>
-                            <option value="Reference book">Reference Book</option>
+                            <option value="Reference Book">Reference Book</option>
                         </select>
                         <span asp-validation-for="LibraryItem.Type" class="text-danger"></span>
                     </div>
