--- a/ConsidWebExercise/Views/LibraryItem/Edit.cshtml
+++ b/ConsidWebExercise/Views/LibraryItem/Edit.cshtml
@@ -14,10 +14,26 @@
             <div class="col-8">
                 <div class="form-group row">
                     <div class="col-4">
+                        <label asp-for="LibraryItem.Type"></label>
+                    </div>
+                    <div class="col-8">
+                        <select asp-for="LibraryItem.Type" class="custom-select">
+                            <option value="Book">Book</option>
+                            <option value="DVD">DVD</option>
+                            <option value="Audio Book">Audio Book</option>
+                            <option value="Reference book">Reference Book</option>
+                        </select>
+                        <span asp-validation-for="LibraryItem.Type" class="text-danger"></span>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <div class="col-4">
                         <label asp-for="LibraryItem.CategoryId"></label>
                     </div>
                     <div class="col-8">
-                        <select asp-for="LibraryItem.CategoryId" asp-items="@(new SelectList(Model.Categories, "Id", "CategoryName"))">
+                        
+                        <select asp-for="LibraryItem.CategoryId" asp-items="@(new SelectList(Model.Categories,"Id","CategoryName"))" class="custom-select">
                         </select>
                         <span asp-validation-for="LibraryItem.CategoryId" class="text-danger"></span>
                     </div>
@@ -64,19 +80,9 @@
                 </div>
 
                 <div class="form-group row">
-                    <div class="col-4">
-                        <label asp-for="LibraryItem.Type"></label>
-                    </div>
-                    <div class="col-8">
-                        <input asp-for="LibraryItem.Type" class="form-control" />
-                        <span asp-validation-for="LibraryItem.Type" class="text-danger"></span>
-                    </div>
-                </div>
-
-                <div class="form-group row">
                     <div class="col-8 offset-4 row">
                         <div class="col">
-                            <input type="submit" class="btn btn-info w-100" value="Update" />
+                            <input type="submit" class="btn btn-info w-100" value="Create" />
                         </div>
                         <div class="col">
                             <a asp-action="Index" class="btn btn-success w-100">Back</a>
