--- a/ConsidWebExercise/Views/CheckInOut/CheckOut.cshtml
+++ b/ConsidWebExercise/Views/CheckInOut/CheckOut.cshtml
@@ -1,18 +1,18 @@
-﻿@model LibraryItem
+﻿@model CheckOutViewModel
 @{
     ViewData["Title"] = "CheckOut";
 }
 
 <h1>CheckOut</h1>
 <form method="post" asp-action="CheckOutPost" asp-route-Id="@Model.Id">
-    <input type="hidden" value="@Model" />
+    <input type="hidden" value="@Model.Id" />
     <div class="form-group row">
         <div class="col-4">
-            <label asp-for="Borrower"></label>
+            <label asp-for="name"></label>
         </div>
         <div class="col-8">
-            <input asp-for="Borrower" class="form-control" />
-            <span asp-validation-for="Borrower" class="text-danger"></span>
+            <input asp-for="name" class="form-control" />
+            <span asp-validation-for="name" class="text-danger"></span>
         </div>
     </div>
     <button type="submit">Check Out</button>
