--- a/ConsidWebExercise/Views/LibraryItem/Index.cshtml
+++ b/ConsidWebExercise/Views/LibraryItem/Index.cshtml
@@ -3,8 +3,6 @@
     ViewData["Title"] = "Library Item";
 }
 
-<div asp-validation-summary="All" class="text-danger"></div>
-
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-4">
@@ -37,15 +35,15 @@
         <table class="table table-bordered table-striped" style="width:100%">
             <thead>
                 <tr>
-                    <th>Title</th>
-                    <th>Category</th>
-                    <th>Author</th>
-                    <th>Pages</th>
-                    <th>Run Time Minues</th>
-                    <th>Borrowable</th>
-                    <th>Borrower</th>
-                    <th>Borrow Date</th>
-                    <th>Type</th>
+                    <th><label asp-for="@Model.libraryItems.First().Title"></label></th>
+                    <th><label asp-for="@Model.libraryItems.First().Category"></label></th>
+                    <th><label asp-for="@Model.libraryItems.First().Author"></label></th>
+                    <th><label asp-for="@Model.libraryItems.First().Pages"></label></th>
+                    <th><label asp-for="@Model.libraryItems.First().RunTimeMinutes"></label></th>
+                    <th><label asp-for="@Model.libraryItems.First().IsBorrowable"></label></th>
+                    <th><label asp-for="@Model.libraryItems.First().Borrower"></label></th>
+                    <th><label asp-for="@Model.libraryItems.First().BorrowDate"></label></th>
+                    <th><label asp-for="@Model.libraryItems.First().Type"></label></th>
                     <th></th>
                 </tr>
             </thead>
