fixed weird issue with not being able to update the employees info

--- a/ConsidWebExercise/Views/Category/Edit.cshtml
+++ b/ConsidWebExercise/Views/Category/Edit.cshtml
@@ -3,6 +3,7 @@
 }
 
 <h1>Edit Category</h1>
+<div asp-validation-summary="All" class="text-danger"></div>
 <form asp-action="Edit" method="post">
     <input asp-for="CategoryName" type="text" value="@Model.CategoryName"/>
     <span asp-validation-for="CategoryName"></span>
