--- a/ConsidWebExercise/Views/CheckInOut/Index.cshtml
+++ b/ConsidWebExercise/Views/CheckInOut/Index.cshtml
@@ -36,8 +36,7 @@
                 {
                     <tr>
                         <td>@obj.Title</td>
-                        <!-- Move this part into the controller for better separation of concerns -->
-                        <td>@Model.categories.Where(category => category.Id == obj.CategoryId).First().CategoryName</td>
+                        <td>@obj.Category.CategoryName</td>
                         <td>@obj.Author</td>
                         <td>@obj.Pages</td>
                         <td>@obj.RunTimeMinutes</td>
@@ -49,7 +48,7 @@
                             <div class="w-75 btn-group" role="group">
                                 @if (obj.BorrowDate == null)
                                 {
-                                    <form asp-controller="CheckInOut" asp-action="CheckOut" asp-route-Id="@obj.Id " method="post">
+                                    <form asp-controller="CheckInOut" asp-action="CheckOut" asp-route-Id="@obj.Id " method="get">
                                         <button class="btn btn-success mx-2" type="submit">Check Out</button>
                                     </form>
                                 }
